--- a/src/app/simulation/simulation-status-logger/SimulationStatusLogger.scss
+++ b/src/app/simulation/simulation-status-logger/SimulationStatusLogger.scss
@@ -3,6 +3,7 @@
     counter-reset: message-number;
     background-color: transparent;
     bottom: 0;
+    top: 100%;
     width: 100%;
     z-index: 1;
 
@@ -16,8 +17,9 @@
     display: inline-flex;
     align-items: center;
     position: absolute;
-    top: -29px;
+    top: -31px;
     box-shadow: 0px -0.5px 2px #555;
+    cursor: move;
 }
 
 .simulation-status-logger__header__label {
@@ -61,19 +63,11 @@
     color: #fff;
 }
 
-.simulation-status-logger__drag-handle {
-    height: 3px;
-    cursor: row-resize;
-    height: 10px;
-    position: absolute;
-    width: 100%;
-    border-top: 2px solid rgba(0, 0, 0, 0.08);
-}
-
-.simulation-status-logger__content {
+.simulation-status-logger__body {
     max-height: 100%;
     height: 100%;
     overflow: hidden auto;
     white-space: pre;
     background-color: #fff8f8;
+    box-shadow: 0 -1px 5px #ccc;
 }
